--- a/_variables.scss
+++ b/_variables.scss
@@ -9,7 +9,7 @@ $color-bot-hm: #00F3BB;
 /* hover botones */
 $color-hbot: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%); 
 /* fondos con skew */
-$color-skew: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+$color-obl: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
 /* texto general */
 $color-texto: #060A24;
 
@@ -27,4 +27,6 @@ $fuente-titulos: 'IBMPlexSans', Impact, Haettenschweiler, 'Arial Narrow Bold', s
 $fuente-pieimg: 'IBMPlexSans-SemiBold', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 /* ======================================================================= */
+
+
 
