--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ header {
 @media screen and (min-width: 1200px) {
   header nav ul {
     margin-right: 5em; } }
-h1, h2 {
+.titular, h2 {
   font-family: "IBMPlexSans", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 2.25em;
   letter-spacing: 0;
@@ -172,10 +172,10 @@ main .conocemas {
   padding: 0.75em;
   width: 100vw;
   height: 46vh; }
-  main .conocemas .presentacion h1 {
+  main .conocemas .presentacion .titular {
     padding-right: 1em;
     line-height: 7vh; }
-    main .conocemas .presentacion h1 .span1 {
+    main .conocemas .presentacion .titular .span1 {
       text-decoration: line-through; }
   main .conocemas .presentacion p {
     padding: 1em 0;
@@ -319,10 +319,10 @@ footer {
     padding: 0.75em 0 0 0; }
     main .conocemas .presentacion {
       margin-left: 8em; }
-      main .conocemas .presentacion h1 {
+      main .conocemas .presentacion .titular {
         width: 70vw;
         font-size: 2.65em; }
-        main .conocemas .presentacion h1 .span2 {
+        main .conocemas .presentacion .titular .span2 {
           color: #0000EC; }
       main .conocemas .presentacion p {
         width: 47vw;
@@ -332,9 +332,8 @@ footer {
       width: 20vw;
       font-size: 1em; }
     main .conocemas .masinfo:hover {
-      background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%); }
-      main .conocemas .masinfo:hover a {
-        color: #FFFFFF; }
+      background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+      color: #FFFFFF; }
   main .episodios {
     display: flex;
     display: -ms-flexbox;
@@ -424,9 +423,8 @@ footer {
     main .novedades .masepisodios {
       width: 30vw; }
     main .novedades .masepisodios:hover {
-      background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%); }
-      main .novedades .masepisodios:hover a {
-        color: #FFFFFF; }
+      background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+      color: #FFFFFF; }
 
   footer {
     flex-direction: row;
@@ -442,7 +440,7 @@ footer {
 /* Tablets en horizonal y escritorios normales
     ------------------------------------------------------------------------- */
 @media screen and (min-width: 1024px) {
-  main .conocemas .presentacion h1 {
+  main .conocemas .presentacion .titular {
     font-size: 4em; }
   main .conocemas .presentacion p {
     width: 49vw;
