--- a/_principal.scss
+++ b/_principal.scss
@@ -175,8 +175,8 @@ main {
             img {
                 display: block;
                 width: 100vw;
-            }
-        }
+            }     
+        }      
     }
 
     .temas {
@@ -403,7 +403,25 @@ footer {
                 img {
                     width: 33.33vw;
                     height: 46vh;
-                }
+                    transform:scale(1);
+                    -ms-transform:scale(1); // IE 9 
+                    -moz-transform:scale(1); // Firefox 
+                    -webkit-transform:scale(1); // Safari and Chrome 
+                    -o-transform:scale(1); // Opera 
+                    -webkit-transition: all 500ms ease-in-out; // IE 9
+                    -moz-transition: all 500ms ease-in-out; // Firefox
+                    -ms-transition: all 500ms ease-in-out; // Safari and Chrome 
+                    -o-transition: all 500ms ease-in-out; // Opera       
+                }        
+                img:hover{
+                    transform:scale(0.9);
+                    -ms-transform:scale(0.9); // IE 9 
+                    -moz-transform:scale(0.9); // Firefox 
+                    -webkit-transform:scale(0.9); // Safari and Chrome 
+                    -o-transform:scale(0.9); // Opera
+                    border-radius: 15%;
+                    @include shadow;
+                }   
             }
         }
 
@@ -661,6 +679,18 @@ footer {
     }
 }
 
+@-webkit-keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 150%
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+}
+
 @keyframes slidein {
     from {
       margin-left: 100%;
@@ -671,4 +701,6 @@ footer {
       margin-left: 0%;
       width: 100%;
     }
-  }
+}
+
+
