--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   max-width: 100vw; }
 
 /* Colores ======================================================================= */
@@ -397,7 +400,26 @@ footer {
     grid-template: repeat(2, 1fr)/repeat(3, 1fr); }
     main .invitados .fotos img {
       width: 33.33vw;
-      height: 46vh; }
+      height: 46vh;
+      transform: scale(1);
+      -ms-transform: scale(1);
+      -moz-transform: scale(1);
+      -webkit-transform: scale(1);
+      -o-transform: scale(1);
+      -webkit-transition: all 500ms ease-in-out;
+      -moz-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+      -o-transition: all 500ms ease-in-out; }
+    main .invitados .fotos img:hover {
+      transform: scale(0.9);
+      -ms-transform: scale(0.9);
+      -moz-transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      -o-transform: scale(0.9);
+      border-radius: 15%;
+      -webkit-box-shadow: 0 8px 6px -6px #060A24;
+      -moz-box-shadow: 0 8px 6px -6px #060A24;
+      box-shadow: 0 8px 6px -6px #060A24; }
   main .temas {
     height: 85vh; }
     main .temas .tsec5 {
@@ -528,6 +550,13 @@ footer {
     height: 70vh; }
     main .temas .tsec5 {
       padding: 1.5em 0; } }
+@-webkit-keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 150%; }
+  to {
+    margin-left: 0%;
+    width: 100%; } }
 @keyframes slidein {
   from {
     margin-left: 100%;
