ajustes detalles - animation img - scroll-behavior: smooth; saltos suaves

--- a/_principal.scss
+++ b/_principal.scss
@@ -36,6 +36,7 @@
 }
 
 .titular, h2 {
+    width: 70vw;
     @include titulos;
 }
 
@@ -364,6 +365,24 @@ footer {
                 img {
                     width: auto;
                     height: 95vh;
+                    transform:scale(1);
+                    -ms-transform:scale(1); 
+                    -moz-transform:scale(1); 
+                    -webkit-transform:scale(1); 
+                    -o-transform:scale(1); 
+                    transition: all 500ms ease-in-out;
+                    -webkit-transition: all 500ms ease-in-out; 
+                    -moz-transition: all 500ms ease-in-out; 
+                    -ms-transition: all 500ms ease-in-out; 
+                    -o-transition: all 500ms ease-in-out;     
+                }
+
+                img:hover {
+                    transform:scale(0.9);
+                    -ms-transform:scale(0.9); 
+                    -moz-transform:scale(0.9);
+                    -webkit-transform:scale(0.9);
+                    -o-transform:scale(0.9);
                 }
             }
 
@@ -404,21 +423,22 @@ footer {
                     width: 33.33vw;
                     height: 46vh;
                     transform:scale(1);
-                    -ms-transform:scale(1); // IE 9 
-                    -moz-transform:scale(1); // Firefox 
-                    -webkit-transform:scale(1); // Safari and Chrome 
-                    -o-transform:scale(1); // Opera 
-                    -webkit-transition: all 500ms ease-in-out; // IE 9
-                    -moz-transition: all 500ms ease-in-out; // Firefox
-                    -ms-transition: all 500ms ease-in-out; // Safari and Chrome 
-                    -o-transition: all 500ms ease-in-out; // Opera       
+                    -ms-transform:scale(1); /* IE 9 */
+                    -moz-transform:scale(1); /* Firefox */ 
+                    -webkit-transform:scale(1); /* Safari and Chrome */ 
+                    -o-transform:scale(1); /* Opera */
+                    transition: all 500ms ease-in-out;
+                    -webkit-transition: all 500ms ease-in-out; /* IE 9 */
+                    -moz-transition: all 500ms ease-in-out; /* Firefox */
+                    -ms-transition: all 500ms ease-in-out; /* Safari and Chrome */
+                    -o-transition: all 500ms ease-in-out; /* Opera */      
                 }        
                 img:hover{
                     transform:scale(0.9);
-                    -ms-transform:scale(0.9); // IE 9 
-                    -moz-transform:scale(0.9); // Firefox 
-                    -webkit-transform:scale(0.9); // Safari and Chrome 
-                    -o-transform:scale(0.9); // Opera
+                    -ms-transform:scale(0.9); /* IE 9 */
+                    -moz-transform:scale(0.9); /* Firefox */
+                    -webkit-transform:scale(0.9); /* Safari and Chrome */
+                    -o-transform:scale(0.9); /* Opera */
                     border-radius: 15%;
                     @include shadow;
                 }   
