--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
-  max-width: 100vw; }
+  max-width: 100vw;
+  scroll-behavior: smooth; }
 
 /* Colores ======================================================================= */
 /* fondo nav y títulos en contraste */
@@ -133,6 +134,7 @@ header {
   header nav ul {
     margin-right: 5em; } }
 .titular, h2 {
+  width: 70vw;
   font-family: "IBMPlexSans", Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 2.25em;
   letter-spacing: 0;
@@ -377,7 +379,23 @@ footer {
       width: auto; }
       main .historia .phone img {
         width: auto;
-        height: 95vh; }
+        height: 95vh;
+        transform: scale(1);
+        -ms-transform: scale(1);
+        -moz-transform: scale(1);
+        -webkit-transform: scale(1);
+        -o-transform: scale(1);
+        transition: all 500ms ease-in-out;
+        -webkit-transition: all 500ms ease-in-out;
+        -moz-transition: all 500ms ease-in-out;
+        -ms-transition: all 500ms ease-in-out;
+        -o-transition: all 500ms ease-in-out; }
+      main .historia .phone img:hover {
+        transform: scale(0.9);
+        -ms-transform: scale(0.9);
+        -moz-transform: scale(0.9);
+        -webkit-transform: scale(0.9);
+        -o-transform: scale(0.9); }
     main .historia .artsec3 {
       width: 43vw;
       height: max-content;
@@ -403,19 +421,32 @@ footer {
       height: 46vh;
       transform: scale(1);
       -ms-transform: scale(1);
+      /* IE 9 */
       -moz-transform: scale(1);
+      /* Firefox */
       -webkit-transform: scale(1);
+      /* Safari and Chrome */
       -o-transform: scale(1);
+      /* Opera */
+      transition: all 500ms ease-in-out;
       -webkit-transition: all 500ms ease-in-out;
+      /* IE 9 */
       -moz-transition: all 500ms ease-in-out;
+      /* Firefox */
       -ms-transition: all 500ms ease-in-out;
-      -o-transition: all 500ms ease-in-out; }
+      /* Safari and Chrome */
+      -o-transition: all 500ms ease-in-out;
+      /* Opera */ }
     main .invitados .fotos img:hover {
       transform: scale(0.9);
       -ms-transform: scale(0.9);
+      /* IE 9 */
       -moz-transform: scale(0.9);
+      /* Firefox */
       -webkit-transform: scale(0.9);
+      /* Safari and Chrome */
       -o-transform: scale(0.9);
+      /* Opera */
       border-radius: 15%;
       -webkit-box-shadow: 0 8px 6px -6px #060A24;
       -moz-box-shadow: 0 8px 6px -6px #060A24;
